--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="header">
-        <div class="container">
-            <nav class="header__nav">
+        <nav class="header__nav">
+                <div class="container">
                 <a href="" class="logo"><img src="../Новая папка (2)/img/logo.svg" alt="logo"></a>
                 <ul class="list">
                     <li class="item">
@@ -34,13 +35,15 @@
                         <a href="" class="products">Sweatshirts</a>
                     </li>
                 </ul>
+            </div>
             </nav>
             <div class="header__nike">
-                <img src="../Новая папка (2)/img/headerBg.png" alt="">
-                <h1 class="header__title">NIKE</h1>
-                <p class="header__txt">Cool sneakers from <span class="txt__nike">nike</span> for you</p>
+                <img class="header__banner" src="img/headerBg.png" alt="">
+                <div class="container nike__content">
+                    <h1 class="header__title">NIKE</h1>
+                    <p class="header__txt">Cool sneakers from <span class="txt__nike">nike</span> for you</p>
+                </div>
             </div>
-        </div>
     </header>
 </body>
 </html>
